--- a/Practical 3/Section A/CMakeLists.txt
+++ b/Practical 3/Section A/CMakeLists.txt
@@ -4,4 +4,4 @@ project(Section_A)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(Section_A
-        Main.cpp Confectionary.cpp Confectionary.h Chocolate.cpp Chocolate.h AeratedChocolate.cpp AeratedChocolate.h DairyMilk.h MilkyBar.h Lindor.h DairyMilkBubbly.h Aero.h)
+        Main.cpp Confectionary.cpp Confectionary.h Chocolate.cpp Chocolate.h AeratedChocolate.cpp AeratedChocolate.h DairyMilk.h MilkyBar.h Lindor.h DairyMilkBubbly.h Aero.h ConfectionaryFactory.h Cadbury.cpp Cadbury.h Nestle.cpp Nestle.h Lindt.cpp Lindt.h)
